@@ -1,5 +1,7 @@
 *SVN*
 
+* Add support for :git_enable_submodules variable, to enable submodules with the git SCM [halorgium]
+
 * If subversion asks for a password, prompt as a last resort [Jamis Buck]
 
 * Use checkout --lightweight for bzr checkout, instead of branch [michiels]
